# aoc-haskell

./: .gitignore  aoc.sh
2015/: LICENSE  haskell.cabal
2015/day01/: build
2015/day02/: Day02.hs
2015/day03/: Day03.hs
2015/day04/: Day04.hs
2015/day05/: Day05.hs
2015/day06/: Day06.hs
2015/lib/: Md5.hs  Split.hs  String.hs
2025/01/: Main.hs
2025/02/: Main.hs
2025/03/: Main.hs
2025/07/: Main.hs
2025/08/: Main.hs
2025/09/: Main  Main.hs
haskell/: aoc.sh  haskell.cabal  template.hs
haskell/day01/: Day01.hs
lib/: build
