cabal-version:      3.0
name:               aoc2015  
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             maripasa
maintainer:         asafexi@proton.me
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:  Split, String, Md5
    build-depends:    base ^>=4.16.4.0, process
    hs-source-dirs:   lib
    default-language: Haskell2010

executable day01
    main-is: Day01.hs
    hs-source-dirs: day01
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day02
    main-is: Day02.hs
    hs-source-dirs: day02
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day03
    main-is: Day03.hs
    hs-source-dirs: day03
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day04
    main-is: Day04.hs
    hs-source-dirs: day04
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day05
    main-is: Day05.hs
    hs-source-dirs: day05
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day06
    main-is: Day06.hs
    hs-source-dirs: day06
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day07
    main-is: Day07.hs
    hs-source-dirs: day07
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day08
    main-is: Day08.hs
    hs-source-dirs: day08
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day09
    main-is: Day09.hs
    hs-source-dirs: day09
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day10
    main-is: Day10.hs
    hs-source-dirs: day10
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day11
    main-is: Day11.hs
    hs-source-dirs: day11
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day12
    main-is: Day12.hs
    hs-source-dirs: day12
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day13
    main-is: Day13.hs
    hs-source-dirs: day13
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day14
    main-is: Day14.hs
    hs-source-dirs: day14
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day15
    main-is: Day15.hs
    hs-source-dirs: day15
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day16
    main-is: Day16.hs
    hs-source-dirs: day16
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day17
    main-is: Day17.hs
    hs-source-dirs: day17
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day18
    main-is: Day18.hs
    hs-source-dirs: day18
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day19
    main-is: Day19.hs
    hs-source-dirs: day19
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day20
    main-is: Day20.hs
    hs-source-dirs: day20
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day21
    main-is: Day21.hs
    hs-source-dirs: day21
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day22
    main-is: Day22.hs
    hs-source-dirs: day22
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day23
    main-is: Day23.hs
    hs-source-dirs: day23
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day24
    main-is: Day24.hs
    hs-source-dirs: day24
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings

executable day25
    main-is: Day25.hs
    hs-source-dirs: day25
    build-depends:
        base ^>=4.16.4.0,
        aoc2015
    default-language: Haskell2010
    import: warnings
